--- a/documentation/index.html
+++ b/documentation/index.html
@@ -160,7 +160,7 @@
 	<div>
 		&nbsp;</div>
 	<div>
-		px_sendGCM($messageType, $messageData);</div>
+		px_sendGCM($messageData, $messageType);</div>
 	<div>
 		}</div>
 </blockquote>
@@ -211,7 +211,7 @@
 <p>
 	Plugin Homepage:&nbsp;<a href="http://pixelartdev.com/referenz/wp-google-cloud-messaging-plugin">http://pixelartdev.com/referenz/wp-google-cloud-messaging-plugin</a>&nbsp;(German)</p>
 <h3>
-	<strong>Please Rate on WordPress Plugin Page!</strong></h3>
+	<strong>Please Rate at WordPress Plugin Page!</strong></h3>
 <p>
 	Donate if you are happy with my plugin and motivate me for more!</p>
 </section>
